--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "liveSassCompile.settings.generateMap" : false,
     "liveSassCompile.settings.includeItems" : [
         "/src/scss/*.scss"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
 
